Update command data for Kia/Stinger

--- a/tests/test_cases/2022/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2022/commands/7E1.7E9.2201A0.yaml
@@ -21,6 +21,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 37
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
+    KIA_GEAR_V2: 11
+    KIA_OUTPUT_SPEED_V2: 0
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 955
+    KIA_TORQUE_CONVERTER_SLIP_V2: 22
+    KIA_TURBINE_SPEED_V2: 933
+    KIA_VSS_7E1: 0
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921000EEC0000000E
+    7E9229400004D000008
+    7E92358C2000B0001FF
+    7E924C0C01C0032CB00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 26
     KIA_BRAKE_PEDAL_V2: 193
     KIA_COMMANDED_GEAR_V2: 18
@@ -101,23 +121,23 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
-    KIA_ATF_T_V2: 46
+    KIA_ATF_T_V2: 37
     KIA_BRAKE_PEDAL_V2: 192
-    KIA_COMMANDED_GEAR_V2: 19
+    KIA_COMMANDED_GEAR_V2: 20
     KIA_CURRENT_GEAR_V2: 3
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED_V2: 803
-    KIA_REL_APP: 11.76471
-    KIA_RPM_V2: 1301
-    KIA_TORQUE_CONVERTER_SLIP_V2: 5
-    KIA_TURBINE_SPEED_V2: 1295
-    KIA_VSS_7E1: 28
+    KIA_OUTPUT_SPEED_V2: 902
+    KIA_REL_APP: 14.90196
+    KIA_RPM_V2: 1160
+    KIA_TORQUE_CONVERTER_SLIP_V2: 44
+    KIA_TURBINE_SPEED_V2: 1108
+    KIA_VSS_7E1: 32
   response: |-
     7E9102A6201A0FFFFC0
-    7E9210014541C161E14
-    7E9223C0C8C56064A08
-    7E92314C115080313FF
-    7E924C0C00C00C53900
+    7E92100122020172611
+    7E922500E184D064A08
+    7E923B0C21E080314FF
+    7E924C0C00C00C53800
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
