Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.010F.yaml
+++ b/tests/test_cases/2020/commands/7E0.010F.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.010F
 test_cases:
 - expected_values:
+    IAT: 9
+  response: 7E803410F31
+- expected_values:
+    IAT: 10
+  response: 7E803410F32
+- expected_values:
     IAT: 27
   response: 7E803410F43
 - expected_values:
