--- a/tests/test_cases/2020/commands/7E0.0132.yaml
+++ b/tests/test_cases/2020/commands/7E0.0132.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0132
 test_cases:
 - expected_values:
+    EVAP_VP: 0
+  response: '7E80441320000'
+- expected_values:
     EVAP_VP: 0.17875
   response: 7E804413202CB
 - expected_values:
