--- a/tests/test_cases/2020/commands/7E0.0108.yaml
+++ b/tests/test_cases/2020/commands/7E0.0108.yaml
@@ -12,3 +12,12 @@ test_cases:
 - expected_values:
     SHRTFT2: 0.78125
   response: '7E803410881'
+- expected_values:
+    SHRTFT2: 2.34375
+  response: '7E803410883'
+- expected_values:
+    SHRTFT2: 3.125
+  response: '7E803410884'
+- expected_values:
+    SHRTFT2: 4.6875
+  response: '7E803410886'
