--- a/tests/test_cases/2020/commands/7E0.010B.yaml
+++ b/tests/test_cases/2020/commands/7E0.010B.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.010B
 test_cases:
 - expected_values:
+    MAP: 36
+  response: 7E803410B24
+- expected_values:
     MAP: 37
   response: 7E803410B25
 - expected_values:
