--- a/tests/test_cases/2020/commands/7E0.010E.yaml
+++ b/tests/test_cases/2020/commands/7E0.010E.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     SPARKADV: 5
   response: 7E803410E8A
+- expected_values:
+    SPARKADV: 6.5
+  response: 7E803410E8D
