--- a/tests/test_cases/2020/commands/7E0.011F.yaml
+++ b/tests/test_cases/2020/commands/7E0.011F.yaml
@@ -13,6 +13,9 @@ test_cases:
     RUNTM: 275
   response: 7E804411F0113
 - expected_values:
+    RUNTM: 447
+  response: 7E804411F01BF
+- expected_values:
     RUNTM: 533
   response: 7E804411F0215
 - expected_values:
