--- a/tests/test_cases/2020/commands/7E0.013C.yaml
+++ b/tests/test_cases/2020/commands/7E0.013C.yaml
@@ -22,5 +22,8 @@ test_cases:
     CATEMP11: 552.3
   response: 7E804413C1723
 - expected_values:
+    CATEMP11: 589
+  response: 7E804413C1892
+- expected_values:
     CATEMP11: 621.4
   response: 7E804413C19D6
