--- a/tests/test_cases/2020/commands/7E0.0143.yaml
+++ b/tests/test_cases/2020/commands/7E0.0143.yaml
@@ -7,6 +7,9 @@ test_cases:
     LOAD_ABS: 14.5098
   response: '7E80441430025'
 - expected_values:
+    LOAD_ABS: 14.90196
+  response: '7E80441430026'
+- expected_values:
     LOAD_ABS: 15.29412
   response: '7E80441430027'
 - expected_values:
