--- a/tests/test_cases/2020/commands/7E0.01A6.yaml
+++ b/tests/test_cases/2020/commands/7E0.01A6.yaml
@@ -13,5 +13,8 @@ test_cases:
     ODO: 26189.7
   response: 7E80641A60003FF09
 - expected_values:
+    ODO: 26214.9
+  response: 7E80641A600040005
+- expected_values:
     ODO: 192988
   response: 7E80641A6001D7298
