Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -61,6 +61,18 @@ test_cases:
     7E825EC015CBB3F0000
     7E826E00C0700AAAAAA
 - expected_values:
+    KIA_EIT: 18
+    KIA_EOT: 78.00315
+    KIA_IAT: 18.00165
+  response: |-
+    7E8102D62E0019FB7FF
+    7E8210000003A000047
+    7E82200000000490172
+    7E82361802C18000067
+    7E82400B3FD033E0000
+    7E825080258A83B0000
+    7E826800C0000AAAAAA
+- expected_values:
     KIA_EIT: 35.25
     KIA_EOT: 93.75354
     KIA_IAT: 35.25208
