--- a/tests/test_cases/2022/commands/770.778.22BC06.yaml
+++ b/tests/test_cases/2022/commands/770.778.22BC06.yaml
@@ -4,7 +4,17 @@ test_cases:
     KIA_BRAKE_LIGHT: 0
   response: |-
     778100B62BC06B48000
+    778216D00000000AAAA
+- expected_values:
+    KIA_BRAKE_LIGHT: 0
+  response: |-
+    778100B62BC06B48000
     778216D00000080AAAA
+- expected_values:
+    KIA_BRAKE_LIGHT: 0
+  response: |-
+    778100B62BC06B48000
+    778216D00010080AAAA
 - expected_values:
     KIA_BRAKE_LIGHT: 0
   response: |-
