--- a/tests/test_cases/2022/commands/7B3.7BB.220101.yaml
+++ b/tests/test_cases/2022/commands/7B3.7BB.220101.yaml
@@ -7,3 +7,10 @@ test_cases:
     7BB1012620101010000
     7BB2100FFFFFFFFFFFF
     7BB22FF4CFFFFFFAAAA
+- expected_values:
+    KIA_HVAC_IAT_PASSENGER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_PASSENGER_VENT: 87.5
+  response: |-
+    7BB1012620101010000
+    7BB2100FFFFFFFFFFFF
+    7BB22FF4DFFFFFFAAAA
