--- a/tests/test_cases/2022/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22E019.yaml
@@ -75,6 +75,40 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E82167012800550000
+    7E822003600FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00000F0F
+    7E8250F0F0D0B000054
+    7E82600010000007E70
+    7E82700000000000020
+    7E828000000000070EA
+    7E82996E9C000000000
+    7E82AB8FBC4EDD5E7AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
+    7E82167012B0055001B
+    7E822003600FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF00001914
+    7E82516151A13000054
+    7E82600010000007E70
+    7E8270000000000001B
+    7E828000000000070EA
+    7E82996E9C000000000
+    7E82AB8FBC4EDD5E7AA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E821670136004B0014
     7E822002B00FFFFFFFF
     7E823FFFF0000FFFFFF
