Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -13,6 +13,18 @@ test_cases:
     7E825AB0096C4479A06
     7E826A00C0000AAAAAA
 - expected_values:
+    KIA_EIT: 15
+    KIA_EOT: 93.75354
+    KIA_IAT: 15.00158
+  response: |-
+    7E8102D62E0019FB7FF
+    7E82100000032000049
+    7E822000000004F0181
+    7E82363802C18000045
+    7E82400C8FD03380000
+    7E8252D0254BD507EFF
+    7E826000D1300AAAAAA
+- expected_values:
     KIA_EIT: 24.75
     KIA_EOT: 93.00353
     KIA_IAT: 24.75182
