--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -109,6 +109,23 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E821670100000300E1
+    7E822FF0500FFFFFFFF
+    7E823FFFF0000FFFFFF
+    7E824FFFFFF0000090E
+    7E8250E12100C000055
+    7E826019E0100007E70
+    7E82700000000A5FF00
+    7E828000000000046EE
+    7E82993E2C000000000
+    7E82A93F68CF450DFAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E821670100000500F2
     7E822FF0B00FFFFFFFF
     7E823FFFF0000FFFFFF
