Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E019.yaml
@@ -41,6 +41,23 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: 0
   response: |-
     7E8104B62E019FFE7E7
+    7E8216701000000000B
+    7E822000B00FCFCFCFC
+    7E823FCFC0000FFFFFF
+    7E824FFFFFF00001013
+    7E8251215131000005D
+    7E82601920100007E70
+    7E8270000000068000D
+    7E8280000000000B2F1
+    7E829A5E3C000000000
+    7E82A9FF84BF4C3DDAA
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: 0
+    KIA_KNOCK_RETARD_2_E019: 0
+    KIA_KNOCK_RETARD_3_E019: 0
+    KIA_KNOCK_RETARD_4_E019: 0
+  response: |-
+    7E8104B62E019FFE7E7
     7E8216701000000000F
     7E822000F00FFFFFFFF
     7E823FFFF0000FFFFFF
