Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7C6.7CE.22B002|fc=1.yaml
@@ -56,6 +56,17 @@ test_cases:
     7CE21001FB000000000
     7CE22A03C0000000000
 - expected_values:
+    KIA_CLUSTER_VOLTAGE: 14.21875
+    KIA_FLI_VOL: 41
+    KIA_FLI_VOL_THIRDGEN: 20.5
+    KIA_ODO_KM: 0
+    KIA_ODO_MI: 54066
+    KIA_VPWR: 14.21875
+  response: |-
+    7CE100F62B002D00000
+    7CE210029B600000000
+    7CE22D3320000000000
+- expected_values:
     KIA_CLUSTER_VOLTAGE: 11.95312
     KIA_FLI_VOL: 48
     KIA_FLI_VOL_THIRDGEN: 24
