--- a/tests/test_cases/2023/commands/7D4.7DC.220101.yaml
+++ b/tests/test_cases/2023/commands/7D4.7DC.220101.yaml
@@ -141,6 +141,16 @@ test_cases:
     7DC21FFF6FFE1008004
     7DC22FF10101B01AAAA
 - expected_values:
+    KIA_BMS_CHG_PWR: 655.35
+    KIA_BMS_DISCHG_PWR: 0.77
+    KIA_BMS_SOC: 8.5
+    KIA_MDPS_MOTOR_CURRENT: 16
+    KIA_WHEEL_ANGLE_ABS: 7.7
+  response: |-
+    7DC1012620101908D00
+    7DC210011FFFF004D03
+    7DC220210100001AAAA
+- expected_values:
     KIA_BMS_CHG_PWR: 0.34
     KIA_BMS_DISCHG_PWR: 3.29
     KIA_BMS_SOC: 100
@@ -151,12 +161,12 @@ test_cases:
     7DC21FFF40022014902
     7DC22DB10102301AAAA
 - expected_values:
-    KIA_BMS_CHG_PWR: 1.58
-    KIA_BMS_DISCHG_PWR: 648.47
-    KIA_BMS_SOC: 19.5
+    KIA_BMS_CHG_PWR: 0.05
+    KIA_BMS_DISCHG_PWR: 1.23
+    KIA_BMS_SOC: 2
     KIA_MDPS_MOTOR_CURRENT: 16
-    KIA_WHEEL_ANGLE_ABS: -68.9
+    KIA_WHEEL_ANGLE_ABS: 12.3
   response: |-
-    7DC1012620101918E13
-    7DC210027009EFD4F03
-    7DC221810101A01AAAA
+    7DC1012620101918D05
+    7DC2100040005007B04
+    7DC22CD10100001AAAA
