--- a/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E021.yaml
@@ -326,6 +326,31 @@ test_cases:
     7E82C40228024201C40
     7E82D1CAAAAAAAAAAAA
 - expected_values:
+    KIA_TB_PRES: 87.02234
+    KIA_TURBO_BOOST: 0.62211
+    KIA_WG_DUTY: 71.04906
+    KIA_WG_POS: 394.75126
+    KIA_WG_POSITION: 394.757
+    KIA_WG_SETPOINT: 84.99886
+    KIA_WG_SP: 84.99762
+    KIA_WG_V: 1.23535
+    KIA_WG_VOLTAGE: 1.23537
+  response: |-
+    7E8105B62E021FE9FCE
+    7E821FF00000029002E
+    7E822FF2DBA245B0956
+    7E823065206E406E806
+    7E82400000000A01000
+    7E82500000079000000
+    7E8267D4DC617000000
+    7E827000000201FA05A
+    7E828F1FCA436663620
+    7E82920A023A01BA018
+    7E82A2223FF000000E0
+    7E82B5EEBF8E0366636
+    7E82CC0228029201D20
+    7E82D1DAAAAAAAAAAAA
+- expected_values:
     KIA_TB_PRES: 87.03063
     KIA_TURBO_BOOST: 0.62331
     KIA_WG_DUTY: 76.49042
