--- a/tests/test_cases/2023/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.2201A0.yaml
@@ -21,6 +21,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 83
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 8
+    KIA_CURRENT_GEAR_V2: 8
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3489
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 887
+    KIA_TORQUE_CONVERTER_SLIP_V2: -3
+    KIA_TURBINE_SPEED_V2: 891
+    KIA_VSS_7E1: 124
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921000DDC7C00000D
+    7E922EC36847B000007
+    7E923F4BF00080808FF
+    7E924F0C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 87
     KIA_BRAKE_PEDAL_V2: 240
     KIA_COMMANDED_GEAR_V2: 8
@@ -141,6 +161,46 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 84
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3375
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 1901
+    KIA_TORQUE_CONVERTER_SLIP_V2: -11
+    KIA_TURBINE_SPEED_V2: 1913
+    KIA_VSS_7E1: 120
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921001DB47800001D
+    7E922E434BC7C023507
+    7E923D4C000080818FF
+    7E924F0C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 84
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3604
+    KIA_REL_APP: 15.68627
+    KIA_RPM_V2: 2038
+    KIA_TORQUE_CONVERTER_SLIP_V2: 1
+    KIA_TURBINE_SPEED_V2: 2038
+    KIA_VSS_7E1: 128
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921001FD88029281F
+    7E922D838507C023508
+    7E92304C037080818FF
+    7E924F0C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 83
     KIA_BRAKE_PEDAL_V2: 240
     KIA_COMMANDED_GEAR_V2: 24
@@ -157,6 +217,106 @@ test_cases:
     7E9210020C8843F4220
     7E922D039FC7B023507
     7E923F8C562080818FF
+    7E924F0C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 84
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3827
+    KIA_REL_APP: 24.31373
+    KIA_RPM_V2: 2170
+    KIA_TORQUE_CONVERTER_SLIP_V2: 2
+    KIA_TURBINE_SPEED_V2: 2168
+    KIA_VSS_7E1: 137
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210021E889383E21
+    7E922E03BCC7C023508
+    7E92308C057080818FF
+    7E924F0C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 84
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3882
+    KIA_REL_APP: 23.92157
+    KIA_RPM_V2: 2199
+    KIA_TORQUE_CONVERTER_SLIP_V2: 3
+    KIA_TURBINE_SPEED_V2: 2196
+    KIA_VSS_7E1: 138
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E92100225C8A373D22
+    7E922503CA87C023508
+    7E9230CC054080818FF
+    7E924F0C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 85
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3960
+    KIA_REL_APP: 30.58824
+    KIA_RPM_V2: 2246
+    KIA_TORQUE_CONVERTER_SLIP_V2: 3
+    KIA_TURBINE_SPEED_V2: 2245
+    KIA_VSS_7E1: 141
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210023188D724E23
+    7E922143DE07D023508
+    7E9230CC074080818FF
+    7E924F0C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 84
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 24
+    KIA_CURRENT_GEAR_V2: 8
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3999
+    KIA_REL_APP: 22.35294
+    KIA_RPM_V2: 2263
+    KIA_TORQUE_CONVERTER_SLIP_V2: -1
+    KIA_TURBINE_SPEED_V2: 2264
+    KIA_VSS_7E1: 143
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E92100235C8F323923
+    7E922603E7C7C023507
+    7E923FCBF4F080818FF
+    7E924F0C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
+    KIA_ATF_T_V2: 84
+    KIA_BRAKE_PEDAL_V2: 240
+    KIA_COMMANDED_GEAR_V2: 23
+    KIA_CURRENT_GEAR_V2: 7
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 3862
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 2520
+    KIA_TORQUE_CONVERTER_SLIP_V2: -4
+    KIA_TURBINE_SPEED_V2: 2522
+    KIA_VSS_7E1: 138
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210027608A000027
+    7E922683C587C028C07
+    7E923F0C000080717FF
     7E924F0C03F00CF2E00
     7E92500000000000000
     7E92600AAAAAAAAAAAA
