Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7B3.7BB.220100|fc=1.yaml
@@ -1,6 +1,23 @@
 command_id: 7B3.7BB.220100|fc=1
 test_cases:
 - expected_values:
+    KIA_HVAC_AAT: -7
+    KIA_HVAC_EVAPORATOR_T: -5
+    KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 65
+    KIA_HVAC_IAT: -5.5
+    KIA_HVAC_IAT_DRIVER_LEGS_VENT: 87.5
+    KIA_HVAC_IAT_DRIVER_VENT: 87.5
+    KIA_TEMP_EXT: -7
+    KIA_TEMP_INT: -5.5
+    KIA_VSS: 0
+  response: |-
+    7BB10256201007F901E
+    7BB2168FF45424603EF
+    7BB22EF03EFFFFF0FFF
+    7BB23FFFFFFFFFFFF11
+    7BB2479412DFFFF0047
+    7BB25FF00FF00000000
+- expected_values:
     KIA_HVAC_AAT: -6.5
     KIA_HVAC_EVAPORATOR_T: -5.5
     KIA_HVAC_HUMIDITY_SENSOR_FOR_AUTOMATIC_DEFOGGER: 71
