--- a/tests/test_cases/2023/commands/7E0.0131.yaml
+++ b/tests/test_cases/2023/commands/7E0.0131.yaml
@@ -10,5 +10,5 @@ test_cases:
     CLR_DIST: 4352
   response: '7E80441311100'
 - expected_values:
-    CLR_DIST: 24439
-  response: 7E80441315F77
+    CLR_DIST: 24576
+  response: '7E80441316000'
