--- a/tests/test_cases/2020/commands/7E0.0111.yaml
+++ b/tests/test_cases/2020/commands/7E0.0111.yaml
@@ -1,14 +1,8 @@
 command_id: 7E0.0111
 test_cases:
 - expected_values:
-    TP: 12.54902
-  response: '7E803411120'
+    TP: 10.98039
+  response: 7E80341111C
 - expected_values:
-    TP: 12.94118
-  response: '7E803411121'
-- expected_values:
-    TP: 13.33333
-  response: '7E803411122'
-- expected_values:
-    TP: 14.11765
-  response: '7E803411124'
+    TP: 38.03922
+  response: '7E803411161'
