--- a/tests/test_cases/2023/commands/7E0.0144.yaml
+++ b/tests/test_cases/2023/commands/7E0.0144.yaml
@@ -1,11 +1,14 @@
 command_id: 7E0.0144
 test_cases:
 - expected_values:
-    EQ_RAT: 0.96132
-  response: 7E80441447B0C
+    EQ_RAT: 0.90584
+  response: 7E804414473F2
 - expected_values:
     EQ_RAT: 0.99977
   response: 7E80441447FF8
+- expected_values:
+    EQ_RAT: 1.00002
+  response: '7E80441448000'
 - expected_values:
     EQ_RAT: 1.99
   response: 7E8044144FFC0
