Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/770.778.22BC05.yaml
+++ b/tests/test_cases/2023/commands/770.778.22BC05.yaml
@@ -31,6 +31,11 @@ test_cases:
     778100B62BC050F1724
     7782100A0200000AAAA
 - expected_values:
+    KIA_HAZARD_SW: 160
+  response: |-
+    778100B62BC050F1724
+    7782100A0600000AAAA
+- expected_values:
     KIA_HAZARD_SW: 240
   response: |-
     778100B62BC050F1724
