--- a/tests/test_cases/2023/commands/770.778.22BC06.yaml
+++ b/tests/test_cases/2023/commands/770.778.22BC06.yaml
@@ -16,6 +16,11 @@ test_cases:
     778100B62BC06B48000
     778216D00010080AAAA
 - expected_values:
+    KIA_BRAKE_LIGHT: 0
+  response: |-
+    778100B62BC06B48000
+    778216D00020080AAAA
+- expected_values:
     KIA_BRAKE_LIGHT: 45
   response: |-
     778100B62BC06B48000
@@ -25,3 +30,8 @@ test_cases:
   response: |-
     778100B62BC06B48000
     778216D2D010080AAAA
+- expected_values:
+    KIA_BRAKE_LIGHT: 45
+  response: |-
+    778100B62BC06B48000
+    778216D2D020080AAAA
