--- a/tests/test_cases/2023/commands/7E0.0134.yaml
+++ b/tests/test_cases/2023/commands/7E0.0134.yaml
@@ -5,9 +5,13 @@ test_cases:
     O2S11_CURRENT: -0.17969
   response: 7E806413475C07FD2
 - expected_values:
-    LAMBDA11_CURRENT: 0.99414
-    O2S11_CURRENT: -0.01172
-  response: 7E80641347F407FFD
+    LAMBDA11_CURRENT: 0.95312
+    O2S11_CURRENT: -0.10547
+  response: 7E80641347A007FE5
+- expected_values:
+    LAMBDA11_CURRENT: 0.99805
+    O2S11_CURRENT: -0.00391
+  response: 7E80641347FC07FFF
 - expected_values:
     LAMBDA11_CURRENT: 1
     O2S11_CURRENT: 0
