--- a/tests/test_cases/2023/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7C6.7CE.22B002|fc=1.yaml
@@ -89,6 +89,17 @@ test_cases:
     7CE210047B000000000
     7CE22A1000000000000
 - expected_values:
+    KIA_CLUSTER_VOLTAGE: 13.82812
+    KIA_FLI_VOL: 71
+    KIA_FLI_VOL_THIRDGEN: 35.5
+    KIA_ODO_KM: 0
+    KIA_ODO_MI: 54301
+    KIA_VPWR: 13.82812
+  response: |-
+    7CE100F62B002D00000
+    7CE210047B100000000
+    7CE22D41D0000000000
+- expected_values:
     KIA_CLUSTER_VOLTAGE: 11.95312
     KIA_FLI_VOL: 255
     KIA_FLI_VOL_THIRDGEN: 127.5
