Update command data for Kia/Stinger

--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -76,6 +76,7 @@ unsupported_commands_by_ecu:
   "744":
   - 744.74C.22E001|fc=1:KIA_AC_CHRG_STATE,KIA_AUX_BATTERY_VOLTAGE,KIA_DC_CHRG_STATE,KIA_ESTIMATED_CHRG_POWER,KIA_OBC_CHRG_AC_CURRENT,KIA_OBC_CHRG_AC_VOLTAGE,KIA_OBC_CHRG_DC_CURRENT,KIA_OBC_CHRG_DC_VOLTAGE,KIA_OBC_DCHRG_AC_CURRENT,KIA_OBC_DCHRG_DC_CURRENT
   "770":
+  - 770.778.22BC03:KIA_BELT_DRIV,KIA_BELT_DRIVER,KIA_BELT_PASS,KIA_BELT_PASSENGER,KIA_DEFOG_SW,KIA_DOOR_FL,KIA_DOOR_FR,KIA_DOOR_RL,KIA_DOOR_RR,KIA_HANDBRAKE,KIA_HOOD,KIA_LOW_BEAMS,KIA_TRUNK
   - 770.778.22BC05:KIA_HAZARD_SW,KIA_HL_SW
   - 770.778.22BC07:KIA_DEFOG_LIGHT
   - 770.778.22BC09:KIA_HL_HIGH,KIA_HL_LOW
