--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -773,3 +773,41 @@ test_cases:
     7A8220000CA320000CB
     7A823320000468FB98F
     7A824B987AF87AFAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 1.2
+    KIA_TPMS_TEMP_FL: 68
+    KIA_TPMS_TEMP_FR: 6
+    KIA_TPMS_TEMP_RL: -5
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 42
+    KIA_TP_FL_PRE21: 42
+    KIA_TP_FR: 13.4
+    KIA_TP_FR_PRE21: 42
+    KIA_TP_RL: 1.2
+    KIA_TP_RL_PRE21: 41.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39.8
+    KIA_TT_FL: 18
+    KIA_TT_FL_PRE21: 18
+    KIA_TT_FR: -44
+    KIA_TT_FR_PRE21: 17
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 19
+    KIA_TT_RR: 201
+    KIA_TT_RR_PRE21: 18
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180D2440600D243
+    7A8220600C7440600CF
+    7A823450700FB8FB98F
+    7A824B987AF87AFAAAA
