Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/7E0.7E8.22E00A.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E00A.yaml
@@ -131,6 +131,16 @@ test_cases:
     7E8224D63C700005F01
     7E82350AAAAAAAAAAAA
 - expected_values:
+    KIA_KNOCK_RETARD_1: -15.2
+    KIA_KNOCK_RETARD_2: 0
+    KIA_KNOCK_RETARD_3: 0
+    KIA_KNOCK_RETARD_4: -0.2
+  response: |-
+    7E8101562E00ABF0100
+    7E821001000CC213D00
+    7E822485BB40000FF00
+    7E82350AAAAAAAAAAAA
+- expected_values:
     KIA_KNOCK_RETARD_1: -12.6
     KIA_KNOCK_RETARD_2: 0
     KIA_KNOCK_RETARD_3: 0
