--- a/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -142,40 +142,77 @@ test_cases:
     7A824AF92BE92BEAAAA
 - expected_values:
     KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 1
+    KIA_FR_INVALID: 0
     KIA_RL_INVALID: 0
     KIA_RR_INVALID: 0
-    KIA_TB_FR: 2_4_2_7V
+    KIA_TB_FR: 3V+
     KIA_TPMS_PRESS_RL: 0
     KIA_TPMS_PRESS_RR: 0.8
-    KIA_TPMS_TEMP_FL: 49
-    KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_FL: 38
+    KIA_TPMS_TEMP_FR: 4
     KIA_TPMS_TEMP_RL: -5
     KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 32.2
-    KIA_TP_FL_PRE21: 32.2
-    KIA_TP_FR: 0
-    KIA_TP_FR_PRE21: 0
+    KIA_TP_FL: 30.6
+    KIA_TP_FL_PRE21: 30.6
+    KIA_TP_FR: 9.4
+    KIA_TP_FR_PRE21: 32.8
     KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 35.4
+    KIA_TP_RL_PRE21: 31
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 35.6
-    KIA_TT_FL: -1
-    KIA_TT_FL_PRE21: -1
-    KIA_TT_FR: -50
+    KIA_TP_RR_PRE21: 34.6
+    KIA_TT_FL: -12
+    KIA_TT_FL_PRE21: -12
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: -3
     KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: -1
+    KIA_TT_RL_PRE21: -13
     KIA_TT_RR: 201
-    KIA_TT_RR_PRE21: -1
+    KIA_TT_RR_PRE21: -8
     KIA_TW_FL: 0
     KIA_TW_FR: 1
     KIA_TW_RL: 1
     KIA_TW_RR: 1
   response: |-
     7A8102062C00BFFFFFF
-    7A82180A13104000000
-    7A8220002B2310400B1
-    7A823310400FB87AF87
+    7A8218099260400A42F
+    7A8220400AD2A04009B
+    7A823250400FB87AF87
+    7A824AF92BE92BEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 1
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 1
+    KIA_TB_FR: 2_4_2_7V
+    KIA_TB_RR: 3V+
+    KIA_TPMS_PRESS_RL: 0.4
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 40
+    KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_RL: -5
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 30.8
+    KIA_TP_FL_PRE21: 30.8
+    KIA_TP_FR: 0
+    KIA_TP_FR_PRE21: 0
+    KIA_TP_RL: 0.8
+    KIA_TP_RR: 0.4
+    KIA_TP_RR_PRE21: 34.2
+    KIA_TT_FL: -10
+    KIA_TT_FL_PRE21: -10
+    KIA_TT_FR: -50
+    KIA_TT_RL: -50
+    KIA_TT_RR: 201
+    KIA_TT_RR_PRE21: -7
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 0
+  response: |-
+    7A8102062C00BFFFFFF
+    7A821809A2804000000
+    7A8220002AB2B040000
+    7A823000002FB87AF87
     7A824AF92BE92BEAAAA
 - expected_values:
     KIA_FL_INVALID: 0
