--- a/tests/test_cases/2020/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7C6.7CE.22B002|fc=1.yaml
@@ -121,3 +121,14 @@ test_cases:
     7CE100F62B002E00000
     7CE21001CB002F7E500
     7CE2200000000000000
+- expected_values:
+    KIA_CLUSTER_VOLTAGE: 13.125
+    KIA_FLI_VOL: 116
+    KIA_FLI_VOL_THIRDGEN: 58
+    KIA_ODO_KM: 72143
+    KIA_ODO_MI: 0
+    KIA_VPWR: 13.125
+  response: |-
+    7CE100F62B002E00000
+    7CE210074A80119CF00
+    7CE2200000000000000
