--- a/tests/test_cases/2020/commands/7E0.7E8.22E004.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E004.yaml
@@ -124,6 +124,13 @@ test_cases:
   response: |-
     7E8101962E004FFFF03
     7E82100FDD1C870F276
+    7E822BA10F88030D4F7
+    7E823F720F51010AAAA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101962E004FFFF03
+    7E82100FDD1C870F276
     7E822FE10F08030DCF3
     7E823F330F51010AAAA
 - expected_values:
