--- a/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
@@ -221,6 +221,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 72
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 1
+    KIA_CURRENT_GEAR_V2: 0
+    KIA_GEAR_V2: 11
+    KIA_OUTPUT_SPEED_V2: 0
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 632
+    KIA_TORQUE_CONVERTER_SLIP_V2: 23
+    KIA_TURBINE_SPEED_V2: 608
+    KIA_VSS_7E1: 0
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E9210009E000000009
+    7E92280000070000008
+    7E9235CB6000B0001FF
+    7E924C0C01C0030CD08
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 102
     KIA_BRAKE_PEDAL_V2: 240
     KIA_COMMANDED_GEAR_V2: 1
