Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -46,6 +46,40 @@ test_cases:
     KIA_TPMS_PRESS_RR: 0
     KIA_TPMS_TEMP_FL: 0
     KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_RL: 74
+    KIA_TPMS_TEMP_RR: 2
+    KIA_TP_FL: 0
+    KIA_TP_FR: 0
+    KIA_TP_FR_PRE21: 0
+    KIA_TP_RL: 0
+    KIA_TP_RR: 0.4
+    KIA_TT_FL: -50
+    KIA_TT_FR: -50
+    KIA_TT_RL: -48
+    KIA_TT_RR: 24
+    KIA_TT_RR_PRE21: -50
+    KIA_TW_FL: 1
+    KIA_TW_FR: 0
+    KIA_TW_RL: 1
+    KIA_TW_RR: 0
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180000000020000
+    7A82200020000000200
+    7A8230000024A96AB96
+    7A824AB9FB69FB6AAAA
+- expected_values:
+    KIA_FL_INVALID: 1
+    KIA_FR_INVALID: 1
+    KIA_RL_INVALID: 1
+    KIA_RR_INVALID: 1
+    KIA_TB_FL: 3V+
+    KIA_TB_FR: 2_4_2_7V
+    KIA_TB_RR: 3V+
+    KIA_TPMS_PRESS_RL: 0.4
+    KIA_TPMS_PRESS_RR: 0
+    KIA_TPMS_TEMP_FL: 0
+    KIA_TPMS_TEMP_FR: 0
     KIA_TPMS_TEMP_RL: 84
     KIA_TPMS_TEMP_RR: 2
     KIA_TP_FL: 0
