--- a/tests/test_cases/2020/commands/7E0.0109.yaml
+++ b/tests/test_cases/2020/commands/7E0.0109.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0109
 test_cases:
 - expected_values:
+    LONGFT2: -12.5
+  response: '7E803410970'
+- expected_values:
     LONGFT2: -1.5625
   response: 7E80341097E
 - expected_values:
