--- a/tests/test_cases/2020/commands/7E0.0155.yaml
+++ b/tests/test_cases/2020/commands/7E0.0155.yaml
@@ -4,5 +4,8 @@ test_cases:
     STSO2FT1: 0
   response: '7E803415580'
 - expected_values:
+    STSO2FT1: 1.5625
+  response: '7E803415582'
+- expected_values:
     STSO2FT1: 2.34375
   response: '7E803415583'
