--- a/tests/test_cases/2020/commands/7E0.0107.yaml
+++ b/tests/test_cases/2020/commands/7E0.0107.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0107
 test_cases:
 - expected_values:
+    LONGFT1: -4.6875
+  response: 7E80341077A
+- expected_values:
     LONGFT1: -2.34375
   response: 7E80341077D
 - expected_values:
