--- a/tests/test_cases/2020/commands/7E0.0143.yaml
+++ b/tests/test_cases/2020/commands/7E0.0143.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0143
 test_cases:
 - expected_values:
+    LOAD_ABS: 12.15686
+  response: 7E8044143001F
+- expected_values:
     LOAD_ABS: 13.72549
   response: '7E80441430023'
 - expected_values:
