Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -354,6 +354,44 @@ test_cases:
     7A824B987AF87AFAAAA
 - expected_values:
     KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 79
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 74
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 37.4
+    KIA_TP_FL_PRE21: 37.4
+    KIA_TP_FR: 15.8
+    KIA_TP_FR_PRE21: 37
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 40.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 36.8
+    KIA_TT_FL: 29
+    KIA_TT_FL_PRE21: 29
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 29
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 28
+    KIA_TT_RR: 24
+    KIA_TT_RR_PRE21: 28
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180BB4F0400B94F
+    7A8220400B84E0400CA
+    7A8234E04004A96AE96
+    7A824AE9EB89EB8AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
     KIA_FR_INVALID: 1
     KIA_RL_INVALID: 0
     KIA_RR_INVALID: 1
@@ -388,6 +426,44 @@ test_cases:
     7A8220002B349040000
     7A823000002468FB98F
     7A824B987AF87AFAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 79
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 78
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 37.6
+    KIA_TP_FL_PRE21: 37.6
+    KIA_TP_FR: 15.8
+    KIA_TP_FR_PRE21: 37
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 40.8
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 37
+    KIA_TT_FL: 29
+    KIA_TT_FL_PRE21: 29
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 29
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 28
+    KIA_TT_RR: 28
+    KIA_TT_RR_PRE21: 29
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180BC4F0400B94F
+    7A8220400B94F0400CC
+    7A8234E04004E97AE97
+    7A824AE9FB89EB8AAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
