--- a/tests/test_cases/2020/commands/770.778.22BC04.yaml
+++ b/tests/test_cases/2020/commands/770.778.22BC04.yaml
@@ -12,6 +12,17 @@ test_cases:
     778100B62BC04302370
     778216A00000042AAAA
 - expected_values:
+    KIA_BELT_RL: 0
+    KIA_BELT_RM: 0
+    KIA_BELT_RR: 0
+    KIA_GEAR_R: 0
+    KIA_LOCK_FL: 0
+    KIA_LOCK_FR: 0
+    KIA_REVERSE_GEAR: 1
+  response: |-
+    778100B62BC04302370
+    778216A0C000002AAAA
+- expected_values:
     KIA_BELT_RL: 1
     KIA_BELT_RM: 1
     KIA_BELT_RR: 1
