--- a/tests/test_cases/2020/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7C6.7CE.22B002|fc=1.yaml
@@ -123,12 +123,23 @@ test_cases:
     7CE2200000000000000
 - expected_values:
     KIA_CLUSTER_VOLTAGE: 13.125
-    KIA_FLI_VOL: 116
-    KIA_FLI_VOL_THIRDGEN: 58
-    KIA_ODO_KM: 72143
+    KIA_FLI_VOL: 113
+    KIA_FLI_VOL_THIRDGEN: 56.5
+    KIA_ODO_KM: 72144
     KIA_ODO_MI: 0
     KIA_VPWR: 13.125
   response: |-
     7CE100F62B002E00000
-    7CE210074A80119CF00
+    7CE210071A80119D000
+    7CE2200000000000000
+- expected_values:
+    KIA_CLUSTER_VOLTAGE: 13.90625
+    KIA_FLI_VOL: 113
+    KIA_FLI_VOL_THIRDGEN: 56.5
+    KIA_ODO_KM: 72143
+    KIA_ODO_MI: 0
+    KIA_VPWR: 13.90625
+  response: |-
+    7CE100F62B002E00000
+    7CE210071B20119CF00
     7CE2200000000000000
