Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/770.778.22BC05.yaml
+++ b/tests/test_cases/2020/commands/770.778.22BC05.yaml
@@ -17,6 +17,11 @@ test_cases:
     778100B62BC050F1724
     778210000280000AAAA
 - expected_values:
+    KIA_HAZARD_SW: 0
+  response: |-
+    778100B62BC050F1724
+    778210000A00000AAAA
+- expected_values:
     KIA_HAZARD_SW: 240
   response: |-
     778100B62BC050F1724
