--- a/tests/test_cases/2023/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2023/commands/7E1.7E9.2201A0.yaml
@@ -241,6 +241,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 62
+    KIA_BRAKE_PEDAL_V2: 241
+    KIA_COMMANDED_GEAR_V2: 18
+    KIA_CURRENT_GEAR_V2: 3
+    KIA_GEAR_V2: 8
+    KIA_OUTPUT_SPEED_V2: 636
+    KIA_REL_APP: 0
+    KIA_RPM_V2: 1012
+    KIA_TORQUE_CONVERTER_SLIP_V2: -18
+    KIA_TURBINE_SPEED_V2: 1026
+    KIA_VSS_7E1: 22
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921000FD016000010
+    7E9220809F066064A07
+    7E923B8C300080312FF
+    7E924F1C03F00CF2E00
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 87
     KIA_BRAKE_PEDAL_V2: 240
     KIA_COMMANDED_GEAR_V2: 8
@@ -381,22 +401,22 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
-    KIA_ATF_T_V2: 83
+    KIA_ATF_T_V2: 56
     KIA_BRAKE_PEDAL_V2: 240
-    KIA_COMMANDED_GEAR_V2: 24
-    KIA_CURRENT_GEAR_V2: 8
+    KIA_COMMANDED_GEAR_V2: 18
+    KIA_CURRENT_GEAR_V2: 1
     KIA_GEAR_V2: 8
-    KIA_OUTPUT_SPEED_V2: 3592
-    KIA_REL_APP: 16.07843
-    KIA_RPM_V2: 2036
-    KIA_TORQUE_CONVERTER_SLIP_V2: 5
-    KIA_TURBINE_SPEED_V2: 2033
-    KIA_VSS_7E1: 128
+    KIA_OUTPUT_SPEED_V2: 383
+    KIA_REL_APP: 17.64706
+    KIA_RPM_V2: 1673
+    KIA_TORQUE_CONVERTER_SLIP_V2: 149
+    KIA_TURBINE_SPEED_V2: 1528
+    KIA_VSS_7E1: 13
   response: |-
     7E9102A6201A0FFFFC0
-    7E921001FD08028291F
-    7E922C438207B023508
-    7E92314C038080818FF
+    7E921001A240D142D17
+    7E922E005FC600F7C0A
+    7E92354C41E080112FF
     7E924F0C03F00CF2E00
     7E92500000000000000
     7E92600AAAAAAAAAAAA
