Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -80,6 +80,40 @@ test_cases:
     KIA_TPMS_PRESS_RR: 0
     KIA_TPMS_TEMP_FL: 0
     KIA_TPMS_TEMP_FR: 0
+    KIA_TPMS_TEMP_RL: 79
+    KIA_TPMS_TEMP_RR: 2
+    KIA_TP_FL: 0
+    KIA_TP_FR: 0
+    KIA_TP_FR_PRE21: 0
+    KIA_TP_RL: 0
+    KIA_TP_RR: 0.4
+    KIA_TT_FL: -50
+    KIA_TT_FR: -50
+    KIA_TT_RL: -48
+    KIA_TT_RR: 29
+    KIA_TT_RR_PRE21: -50
+    KIA_TW_FL: 1
+    KIA_TW_FR: 0
+    KIA_TW_RL: 1
+    KIA_TW_RR: 0
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180000000020000
+    7A82200020000000200
+    7A8230000024F96AB96
+    7A824AB9FB69FB6AAAA
+- expected_values:
+    KIA_FL_INVALID: 1
+    KIA_FR_INVALID: 1
+    KIA_RL_INVALID: 1
+    KIA_RR_INVALID: 1
+    KIA_TB_FL: 3V+
+    KIA_TB_FR: 2_4_2_7V
+    KIA_TB_RR: 3V+
+    KIA_TPMS_PRESS_RL: 0.4
+    KIA_TPMS_PRESS_RR: 0
+    KIA_TPMS_TEMP_FL: 0
+    KIA_TPMS_TEMP_FR: 0
     KIA_TPMS_TEMP_RL: 84
     KIA_TPMS_TEMP_RR: 2
     KIA_TP_FL: 0
@@ -426,44 +460,6 @@ test_cases:
     7A8220500BB510500CD
     7A8235104004E99AF9A
     7A824AFA0B8A0B8AAAA
-- expected_values:
-    KIA_FL_INVALID: 0
-    KIA_FR_INVALID: 0
-    KIA_RL_INVALID: 0
-    KIA_RR_INVALID: 0
-    KIA_TB_FR: 3V+
-    KIA_TPMS_PRESS_RL: 0
-    KIA_TPMS_PRESS_RR: 0.8
-    KIA_TPMS_TEMP_FL: 81
-    KIA_TPMS_TEMP_FR: 4
-    KIA_TPMS_TEMP_RL: 79
-    KIA_TPMS_TEMP_RR: 0
-    KIA_TP_FL: 37.8
-    KIA_TP_FL_PRE21: 37.8
-    KIA_TP_FR: 16.4
-    KIA_TP_FR_PRE21: 37.6
-    KIA_TP_RL: 0.8
-    KIA_TP_RL_PRE21: 40.8
-    KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 37.4
-    KIA_TT_FL: 31
-    KIA_TT_FL_PRE21: 31
-    KIA_TT_FR: -46
-    KIA_TT_FR_PRE21: 32
-    KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 30
-    KIA_TT_RR: 29
-    KIA_TT_RR_PRE21: 30
-    KIA_TW_FL: 0
-    KIA_TW_FR: 1
-    KIA_TW_RL: 1
-    KIA_TW_RR: 1
-  response: |-
-    7A8102062C00BFFFFFF
-    7A82180BD510400BC52
-    7A8220400BB500400CC
-    7A8235004004F96AE99
-    7A824AE9EB89EB8AAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
