Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -193,6 +193,18 @@ test_cases:
     7E825BA0163BC32FFFF
     7E826400D2C00AAAAAA
 - expected_values:
+    KIA_EIT: 9
+    KIA_EOT: 87.75339
+    KIA_IAT: 9.00143
+  response: |-
+    7E8102D62E0019FB7FF
+    7E8210000003E000049
+    7E822000000004F0181
+    7E82363802C18000054
+    7E82400BDFD03310000
+    7E82567024CB5620000
+    7E826600C0000AAAAAA
+- expected_values:
     KIA_EIT: 21.75
     KIA_EOT: 78.00315
     KIA_IAT: 21.75174
