--- a/tests/test_cases/2023/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E001.yaml
@@ -566,6 +566,18 @@ test_cases:
     7E826D400F136AAAAAA
 - expected_values:
     KIA_EIT: 0
+    KIA_EOT: 26.25186
+    KIA_IAT: 0.0012
+  response: |-
+    7E8102D62E0019FF7FE
+    7E82100D5D044880B48
+    7E82200000000C400E4
+    7E82329D02307000029
+    7E824017A0000400000
+    7E82522034063228200
+    7E826D300A736AAAAAA
+- expected_values:
+    KIA_EIT: 0
     KIA_EOT: 6.00135
     KIA_IAT: 0.0012
   response: |-
