--- a/tests/test_cases/2023/commands/770.778.22BC03.yaml
+++ b/tests/test_cases/2023/commands/770.778.22BC03.yaml
@@ -35,6 +35,22 @@ test_cases:
 - expected_values:
     KIA_BELT_DRIV: 1
     KIA_BELT_DRIVER: 1
+    KIA_BELT_PASS: 0
+    KIA_BELT_PASSENGER: 0
+    KIA_DOOR_FL: 0
+    KIA_DOOR_FR: 0
+    KIA_DOOR_RL: 0
+    KIA_DOOR_RR: 0
+    KIA_HANDBRAKE: 0
+    KIA_HOOD: 0
+    KIA_LOW_BEAMS: 0
+    KIA_TRUNK: 0
+  response: |-
+    778100B62BC03FDEE20
+    778216200620002AAAA
+- expected_values:
+    KIA_BELT_DRIV: 1
+    KIA_BELT_DRIVER: 1
     KIA_BELT_PASS: 1
     KIA_BELT_PASSENGER: 0
     KIA_DOOR_FL: 0
