--- a/tests/test_cases/2023/commands/770.778.22BC06.yaml
+++ b/tests/test_cases/2023/commands/770.778.22BC06.yaml
@@ -24,6 +24,11 @@ test_cases:
     KIA_BRAKE_LIGHT: 44
   response: |-
     778100B62BC06B48000
+    778216D2C000080AAAA
+- expected_values:
+    KIA_BRAKE_LIGHT: 44
+  response: |-
+    778100B62BC06B48000
     778216D2C020080AAAA
 - expected_values:
     KIA_BRAKE_LIGHT: 45
