--- a/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -259,6 +259,44 @@ test_cases:
     KIA_RR_INVALID: 0
     KIA_TB_FR: 3V+
     KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0
+    KIA_TPMS_TEMP_FL: 52
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: -5
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 33
+    KIA_TP_FL_PRE21: 33
+    KIA_TP_FR: 10.8
+    KIA_TP_FR_PRE21: 34
+    KIA_TP_RL: 0
+    KIA_TP_RL_PRE21: 33.8
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 38
+    KIA_TT_FL: 2
+    KIA_TT_FL_PRE21: 2
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 4
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 3
+    KIA_TT_RR: 201
+    KIA_TT_RR_PRE21: 0
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180A5340400AA36
+    7A8220400BE320000A9
+    7A823350600FB87AF87
+    7A824AF92BE92BEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
     KIA_TPMS_PRESS_RR: 1.2
     KIA_TPMS_TEMP_FL: 53
     KIA_TPMS_TEMP_FR: 6
