Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/7E0.7E8.22E004.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E004.yaml
@@ -102,6 +102,13 @@ test_cases:
     KIA_22E004: 100
   response: |-
     7E8101A62E004FFFF07
+    7E82100FDD1CD77F276
+    7E822F810F080F0D4F1
+    7E823003032101000AA
+- expected_values:
+    KIA_22E004: 100
+  response: |-
+    7E8101A62E004FFFF07
     7E82100FDDDC977F276
     7E822FE10F080B0DCF7
     7E823003032101000AA
