Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/770.778.22BC04.yaml
+++ b/tests/test_cases/2023/commands/770.778.22BC04.yaml
@@ -29,6 +29,17 @@ test_cases:
     KIA_GEAR_R: 0
     KIA_LOCK_FL: 0
     KIA_LOCK_FR: 0
+    KIA_REVERSE_GEAR: 0
+  response: |-
+    778100B62BC04332770
+    778216200800E42AAAA
+- expected_values:
+    KIA_BELT_RL: 1
+    KIA_BELT_RM: 1
+    KIA_BELT_RR: 1
+    KIA_GEAR_R: 0
+    KIA_LOCK_FL: 0
+    KIA_LOCK_FR: 0
     KIA_REVERSE_GEAR: 1
   response: |-
     778100B62BC04332770
