--- a/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -72,6 +72,43 @@ test_cases:
 - expected_values:
     KIA_FL_INVALID: 1
     KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FL: 3V+
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 0
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: -5
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 0
+    KIA_TP_FR: 11
+    KIA_TP_FR_PRE21: 34
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 32.2
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 35.8
+    KIA_TT_FL: -50
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 5
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: -3
+    KIA_TT_RR: 201
+    KIA_TT_RR_PRE21: 0
+    KIA_TW_FL: 1
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A8218000000002AA37
+    7A8220400B3320400A1
+    7A8232F0500FB87AF87
+    7A824AF92BE92BEAAAA
+- expected_values:
+    KIA_FL_INVALID: 1
+    KIA_FR_INVALID: 0
     KIA_RL_INVALID: 1
     KIA_RR_INVALID: 1
     KIA_TB_FL: 3V+
