Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E021.yaml
@@ -127,6 +127,27 @@ test_cases:
     7E828600B593C7A3C00
     7E829610061005D805B
 - expected_values:
+    KIA_TB_PRES: 95.2553
+    KIA_TURBO_BOOST: 1.81625
+    KIA_WG_DUTY: 38.71214
+    KIA_WG_POS: 19.39699
+    KIA_WG_POSITION: 19.39727
+    KIA_WG_SETPOINT: 68.12238
+    KIA_WG_SP: 68.12139
+    KIA_WG_V: 3.69141
+    KIA_WG_VOLTAGE: 3.69146
+  response: |-
+    7E8104562E021FE9FC6
+    7E8217F0000002CE12E
+    7E822E02EFC0C0000B7
+    7E82308B30895090000
+    7E82400000000FF0F00
+    7E82500000079000000
+    7E826F4417D10000000
+    7E827000000C75E8031
+    7E8288D0C6A2B992B00
+    7E829614061005D805B
+- expected_values:
     KIA_TB_PRES: 95.26359
     KIA_TURBO_BOOST: 1.81745
     KIA_WG_DUTY: 35.96551
@@ -169,6 +190,27 @@ test_cases:
     7E8281CFF9B2A972A00
     7E829610061005D805B
 - expected_values:
+    KIA_TB_PRES: 95.26359
+    KIA_TURBO_BOOST: 1.81745
+    KIA_WG_DUTY: 35.39178
+    KIA_WG_POS: 14.41041
+    KIA_WG_POSITION: 14.41062
+    KIA_WG_SETPOINT: 73.82925
+    KIA_WG_SP: 73.82818
+    KIA_WG_V: 3.67676
+    KIA_WG_VOLTAGE: 3.67681
+  response: |-
+    7E8104562E021FE9FC6
+    7E8217F0000002CE22E
+    7E822E22EF40D000075
+    7E82308730843090000
+    7E82400000000FF0F00
+    7E82500000079000000
+    7E826F4417D10000000
+    7E8270000005F5E202D
+    7E8284D09392F402F00
+    7E829614061005D805B
+- expected_values:
     KIA_TB_PRES: 95.28846
     KIA_TURBO_BOOST: 1.82106
     KIA_WG_DUTY: 31.2108
@@ -190,26 +232,26 @@ test_cases:
     7E828F30C0D355D3500
     7E829610061005D805B
 - expected_values:
-    KIA_TB_PRES: 95.37966
-    KIA_TURBO_BOOST: 1.83429
-    KIA_WG_DUTY: 28.45197
-    KIA_WG_POS: 17.60255
-    KIA_WG_POSITION: 17.60281
-    KIA_WG_SETPOINT: 86.37827
-    KIA_WG_SP: 86.37702
-    KIA_WG_V: 3.6377
-    KIA_WG_VOLTAGE: 3.63775
+    KIA_TB_PRES: 95.35479
+    KIA_TURBO_BOOST: 1.83068
+    KIA_WG_DUTY: 27.20378
+    KIA_WG_POS: 15.11232
+    KIA_WG_POSITION: 15.11254
+    KIA_WG_SETPOINT: 88.14832
+    KIA_WG_SP: 88.14704
+    KIA_WG_V: 3.66211
+    KIA_WG_VOLTAGE: 3.66217
   response: |-
     7E8104562E021FE9FC6
-    7E8217F0000002CF02E
-    7E822EF2E4127000019
-    7E8230B400C1F0D0000
-    7E8240F000000FF0F00
-    7E82500000018010000
-    7E826B3447A1B000000
-    7E827000000C55D2024
-    7E8286B0B4437483700
-    7E82961E060005D805B
+    7E8217F0000002CED2E
+    7E822EC2EE923000094
+    7E8230AD00A280C0000
+    7E82400000000FF0F00
+    7E82500000045010000
+    7E826DD432218000000
+    7E827000000F05DC022
+    7E828D209AC386A3800
+    7E829614061005D805B
 - expected_values:
     KIA_TB_PRES: 95.83567
     KIA_TURBO_BOOST: 1.90043
