Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -620,6 +620,44 @@ test_cases:
     KIA_TB_FR: 3V+
     KIA_TPMS_PRESS_RL: 0
     KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 86
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 78
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 38.6
+    KIA_TP_FL_PRE21: 38.6
+    KIA_TP_FR: 16.6
+    KIA_TP_FR_PRE21: 37.6
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 42.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 37.6
+    KIA_TT_FL: 36
+    KIA_TT_FL_PRE21: 36
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 33
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 38
+    KIA_TT_RR: 28
+    KIA_TT_RR_PRE21: 32
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180C1560400BC53
+    7A8220400BC520400D4
+    7A8235805004E9CB29A
+    7A824AFA1B9A5BEAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
     KIA_TPMS_TEMP_FL: 83
     KIA_TPMS_TEMP_FR: 6
     KIA_TPMS_TEMP_RL: 70
@@ -688,6 +726,82 @@ test_cases:
     7A8220600BC520600BD
     7A823520600468FB98F
     7A824B987AF87AFAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 87
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 78
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 39
+    KIA_TP_FL_PRE21: 39
+    KIA_TP_FR: 17
+    KIA_TP_FR_PRE21: 38.4
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 42.6
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 38.6
+    KIA_TT_FL: 37
+    KIA_TT_FL_PRE21: 37
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 35
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 37
+    KIA_TT_RR: 28
+    KIA_TT_RR_PRE21: 35
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180C3570400C055
+    7A8220400C1550400D5
+    7A8235704004E9CB39B
+    7A824B2A4BCA5BDAAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 0.8
+    KIA_TPMS_TEMP_FL: 87
+    KIA_TPMS_TEMP_FR: 4
+    KIA_TPMS_TEMP_RL: 78
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 39
+    KIA_TP_FL_PRE21: 39
+    KIA_TP_FR: 17
+    KIA_TP_FR_PRE21: 38.4
+    KIA_TP_RL: 0.8
+    KIA_TP_RL_PRE21: 42.8
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 38.8
+    KIA_TT_FL: 37
+    KIA_TT_FL_PRE21: 37
+    KIA_TT_FR: -46
+    KIA_TT_FR_PRE21: 35
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 37
+    KIA_TT_RR: 28
+    KIA_TT_RR_PRE21: 36
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180C3570400C055
+    7A8220400C2560400D6
+    7A8235704004E9CB39B
+    7A824B2A4BDA5BDAAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
