--- a/tests/test_cases/2023/commands/770.778.22BC06.yaml
+++ b/tests/test_cases/2023/commands/770.778.22BC06.yaml
@@ -39,6 +39,11 @@ test_cases:
     KIA_BRAKE_LIGHT: 45
   response: |-
     778100B62BC06B48000
+    778216D2D000092AAAA
+- expected_values:
+    KIA_BRAKE_LIGHT: 45
+  response: |-
+    778100B62BC06B48000
     778216D2D010080AAAA
 - expected_values:
     KIA_BRAKE_LIGHT: 45
