Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/7E0.7E8.22E00A.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E00A.yaml
@@ -61,6 +61,16 @@ test_cases:
     7E822485BB500001F01
     7E82350AAAAAAAAAAAA
 - expected_values:
+    KIA_KNOCK_RETARD_1: -14
+    KIA_KNOCK_RETARD_2: 0
+    KIA_KNOCK_RETARD_3: 0
+    KIA_KNOCK_RETARD_4: -6.6
+  response: |-
+    7E8101562E00ABF0100
+    7E8210004004E205600
+    7E822525ABA0000DF00
+    7E82350AAAAAAAAAAAA
+- expected_values:
     KIA_KNOCK_RETARD_1: -12.8
     KIA_KNOCK_RETARD_2: 0
     KIA_KNOCK_RETARD_3: 0
