Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/7E0.7E8.22E019.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E019.yaml
@@ -391,6 +391,22 @@ test_cases:
     KIA_KNOCK_RETARD_4_E019: -191.25
   response: |-
     7E8104562E019E7E1E1
+    7E82161011B001B0000
+    7E822000000BFBFBFBF
+    7E82300000000000000
+    7E82400000000001920
+    7E825221800000000B8
+    7E826FF14FF00007E00
+    7E82700000000040011
+    7E82800B3EA0000FCF4
+    7E829C4FD0000000000
+- expected_values:
+    KIA_KNOCK_RETARD_1_E019: -191.25
+    KIA_KNOCK_RETARD_2_E019: -191.25
+    KIA_KNOCK_RETARD_3_E019: -191.25
+    KIA_KNOCK_RETARD_4_E019: -191.25
+  response: |-
+    7E8104562E019E7E1E1
     7E82161016B00FEFF00
     7E822000000BFBFBFBF
     7E82300000000000000
