--- a/tests/test_cases/2023/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E021.yaml
@@ -106,6 +106,27 @@ test_cases:
     7E828A3087131393100
     7E82961E060005D805B
 - expected_values:
+    KIA_TB_PRES: 95.19726
+    KIA_TURBO_BOOST: 1.80783
+    KIA_WG_DUTY: 23.89868
+    KIA_WG_POS: 17.54762
+    KIA_WG_POSITION: 17.54788
+    KIA_WG_SETPOINT: 94.25193
+    KIA_WG_SP: 94.25056
+    KIA_WG_V: 3.66211
+    KIA_WG_VOLTAGE: 3.66217
+  response: |-
+    7E8104562E021FE9FC6
+    7E8217F0000002CDA2E
+    7E822DA2E72240000FA
+    7E8230C520F390F0000
+    7E82431000000FF0F00
+    7E8250000006A010000
+    7E826FF43AB18000000
+    7E8270000008D5DC01E
+    7E828970B3B3C523C00
+    7E829614061005D805B
+- expected_values:
     KIA_TB_PRES: 95.24701
     KIA_TURBO_BOOST: 1.81505
     KIA_WG_DUTY: 25.29335
