--- a/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2020/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -696,36 +696,112 @@ test_cases:
     KIA_TB_FR: 3V+
     KIA_TPMS_PRESS_RL: 0
     KIA_TPMS_PRESS_RR: 1.2
-    KIA_TPMS_TEMP_FL: 86
+    KIA_TPMS_TEMP_FL: 88
     KIA_TPMS_TEMP_FR: 6
     KIA_TPMS_TEMP_RL: 74
     KIA_TPMS_TEMP_RR: 0
     KIA_TP_FL: 39
     KIA_TP_FL_PRE21: 39
-    KIA_TP_FR: 17.2
+    KIA_TP_FR: 17.4
     KIA_TP_FR_PRE21: 38.6
     KIA_TP_RL: 1.2
-    KIA_TP_RL_PRE21: 43
+    KIA_TP_RL_PRE21: 42.6
     KIA_TP_RR: 0
-    KIA_TP_RR_PRE21: 39.6
-    KIA_TT_FL: 36
-    KIA_TT_FL_PRE21: 36
+    KIA_TP_RR_PRE21: 39.4
+    KIA_TT_FL: 38
+    KIA_TT_FL_PRE21: 38
     KIA_TT_FR: -44
-    KIA_TT_FR_PRE21: 36
+    KIA_TT_FR_PRE21: 37
     KIA_TT_RL: -50
-    KIA_TT_RL_PRE21: 38
+    KIA_TT_RL_PRE21: 39
     KIA_TT_RR: 24
-    KIA_TT_RR_PRE21: 38
+    KIA_TT_RR_PRE21: 39
     KIA_TW_FL: 0
     KIA_TW_FR: 1
     KIA_TW_RL: 1
     KIA_TW_RR: 1
   response: |-
     7A8102062C00BFFFFFF
-    7A82180C3560600C156
-    7A8220600C6580600D7
-    7A8235806004A9FB69F
-    7A824B6A9C2A9C2AAAA
+    7A82180C3580600C157
+    7A8220600C5590600D5
+    7A8235906004AA0B89F
+    7A824B7A9C3A9C3AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 1.2
+    KIA_TPMS_TEMP_FL: 88
+    KIA_TPMS_TEMP_FR: 6
+    KIA_TPMS_TEMP_RL: 74
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 39
+    KIA_TP_FL_PRE21: 39
+    KIA_TP_FR: 17.6
+    KIA_TP_FR_PRE21: 38.6
+    KIA_TP_RL: 1.2
+    KIA_TP_RL_PRE21: 43.4
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39.8
+    KIA_TT_FL: 38
+    KIA_TT_FL_PRE21: 38
+    KIA_TT_FR: -44
+    KIA_TT_FR_PRE21: 38
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 40
+    KIA_TT_RR: 24
+    KIA_TT_RR_PRE21: 41
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180C3580600C158
+    7A8220600C75B0600D9
+    7A8235A06004AA0B8A0
+    7A824B8AAC5AAC3AAAA
+- expected_values:
+    KIA_FL_INVALID: 0
+    KIA_FR_INVALID: 0
+    KIA_RL_INVALID: 0
+    KIA_RR_INVALID: 0
+    KIA_TB_FR: 3V+
+    KIA_TPMS_PRESS_RL: 0
+    KIA_TPMS_PRESS_RR: 1.2
+    KIA_TPMS_TEMP_FL: 88
+    KIA_TPMS_TEMP_FR: 6
+    KIA_TPMS_TEMP_RL: 74
+    KIA_TPMS_TEMP_RR: 0
+    KIA_TP_FL: 39
+    KIA_TP_FL_PRE21: 39
+    KIA_TP_FR: 17.8
+    KIA_TP_FR_PRE21: 39
+    KIA_TP_RL: 1.2
+    KIA_TP_RL_PRE21: 43.6
+    KIA_TP_RR: 0
+    KIA_TP_RR_PRE21: 39.6
+    KIA_TT_FL: 38
+    KIA_TT_FL_PRE21: 38
+    KIA_TT_FR: -44
+    KIA_TT_FR_PRE21: 39
+    KIA_TT_RL: -50
+    KIA_TT_RL_PRE21: 41
+    KIA_TT_RR: 24
+    KIA_TT_RR_PRE21: 40
+    KIA_TW_FL: 0
+    KIA_TW_FR: 1
+    KIA_TW_RL: 1
+    KIA_TW_RR: 1
+  response: |-
+    7A8102062C00BFFFFFF
+    7A82180C3580600C359
+    7A8220600C65A0600DA
+    7A8235B06004AA0B8A0
+    7A824B8AAC3AAC5AAAA
 - expected_values:
     KIA_FL_INVALID: 0
     KIA_FR_INVALID: 0
