--- a/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
+++ b/tests/test_cases/2020/commands/7E1.7E9.2201A0.yaml
@@ -501,6 +501,26 @@ test_cases:
     7E92500000000000000
     7E92600AAAAAAAAAAAA
 - expected_values:
+    KIA_ATF_T_V2: 60
+    KIA_BRAKE_PEDAL_V2: 192
+    KIA_COMMANDED_GEAR_V2: 20
+    KIA_CURRENT_GEAR_V2: 4
+    KIA_GEAR_V2: 12
+    KIA_OUTPUT_SPEED_V2: 1704
+    KIA_REL_APP: 15.68627
+    KIA_RPM_V2: 2031
+    KIA_TORQUE_CONVERTER_SLIP_V2: 1
+    KIA_TURBINE_SPEED_V2: 2030
+    KIA_VSS_7E1: 60
+  response: |-
+    7E9102A6201A0FFFFC0
+    7E921001FBC3C27281F
+    7E922B81AA06404A608
+    7E92304C22C0C0414FF
+    7E924C0C40C00C43A08
+    7E92500000000000000
+    7E92600AAAAAAAAAAAA
+- expected_values:
     KIA_ATF_T_V2: 74
     KIA_BRAKE_PEDAL_V2: 240
     KIA_COMMANDED_GEAR_V2: 20
