Update command data for Kia/Stinger

--- a/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
+++ b/tests/test_cases/2020/commands/7E0.7E8.22E001.yaml
@@ -13,6 +13,18 @@ test_cases:
     7E825310178BD640000
     7E826A00C0000AAAAAA
 - expected_values:
+    KIA_EIT: 42.75
+    KIA_EOT: 89.25343
+    KIA_IAT: 42.75227
+  response: |-
+    7E8102D62E0019FB7CF
+    7E82100000054000049
+    7E822000000005601E4
+    7E82365C02C18000052
+    7E82400BFFD035C0000
+    7E8252B0179B7640000
+    7E826E00C0700AAAAAA
+- expected_values:
     KIA_EIT: 38.25
     KIA_EOT: 92.25351
     KIA_IAT: 38.25216
