--- a/tests/test_cases/2023/commands/7E0.7E8.22E021.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E021.yaml
@@ -1135,6 +1135,27 @@ test_cases:
     7E8280A02580B890B00
     7E829610061005D805B
 - expected_values:
+    KIA_TB_PRES: 103.47168
+    KIA_TURBO_BOOST: 3.00799
+    KIA_WG_DUTY: 57.70657
+    KIA_WG_POS: 9.61304
+    KIA_WG_POSITION: 9.61318
+    KIA_WG_SETPOINT: 29.89548
+    KIA_WG_SP: 29.89504
+    KIA_WG_V: 3.64258
+    KIA_WG_VOLTAGE: 3.64263
+  response: |-
+    7E8104562E021FE9FC6
+    7E8217F0000E030C035
+    7E822C035E8350E0E1D
+    7E82321BE20861FE21F
+    7E824BC02D502001100
+    7E8250000006A010000
+    7E8262053212A000000
+    7E8270000004C5D4049
+    7E828DD062713221300
+    7E829614061005D805B
+- expected_values:
     KIA_TB_PRES: 104.1018
     KIA_TURBO_BOOST: 3.09939
     KIA_WG_DUTY: 74.21988
