Update command data for Kia/Stinger

--- a/tests/test_cases/2023/commands/7E0.7E8.22E002.yaml
+++ b/tests/test_cases/2023/commands/7E0.7E8.22E002.yaml
@@ -59,6 +59,19 @@ test_cases:
     KIA_INJ_DUR_4: 0.41943
   response: |-
     7E8102A62E002D4F400
+    7E8210000002700E301
+    7E82200001C64000000
+    7E82300000000000002
+    7E82400020002000200
+    7E82500000000000000
+    7E82600AAAAAAAAAAAA
+- expected_values:
+    KIA_INJ_DUR_1: 0.41943
+    KIA_INJ_DUR_2: 0.41943
+    KIA_INJ_DUR_3: 0.41943
+    KIA_INJ_DUR_4: 0.41943
+  response: |-
+    7E8102A62E002D4F400
     7E8210000002700F701
     7E82200000C97000000
     7E82300000000000002
